--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">   
+    <link rel="stylesheet" href="/css/stylesheet.css">   
     <title>Document</title>
+    
 </head>
 <body>
-    <a href="/users/logout">Logout</a>
     <h1>Hello <%= user.charAt(0).toUpperCase() + user.slice(1) %></h1>
+    <a href="/users/logout" id="logout">Logout</a>
     <h2>Select your major</h2>
     <form action="/users/Dashboard" method="POST">
         <select name="major" id="major">
@@ -17,7 +18,7 @@
         </select>
         <button type="submit">Submit</button>
     </form>
-    <h2>Enter Current Courses</h2>
+    <h2>Enter Courses</h2>
     <form action="/users/dashboard/addCourse" method="POST">
         <div>
             <input type="text" id="courseId" name="courseId" placeholder="EECS 280">
@@ -26,12 +27,16 @@
             <button type="submit">Add Course</button>
         </div>
     </form>
-
-    <h2>Check my courses</h2>
-    <form action="/users/dashboard/checkCourse" method="POST">
+    <div id="userCourses">
+    <h2>My courses</h2>
+    <form id="checkCoursesForm" action="/users/dashboard/checkCourse" method="POST">
         <div>
-            <button type="submit">Check Courses</button>
+            <button type="submit">Load Courses</button>
         </div>
     </form>
+
+    <div id="coursesList"></div>
+    </div>
+    <script src="/js/script.js"></script>
 </body>
 </html>
