--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -12,7 +12,7 @@
     <a href="/users/logout" id="logout">Logout</a>
     <h2>Daily calories: 520</h2>
     <h2>Select your dining hall</h2>
-    <form action="/users/Dashboard" method="POST" id="diningHallForm">
+    <form id="diningHallForm">
         <select name="diningHall" id="diningHall">
             <!-- Options will be populated dynamically -->
         </select>
