updated menu display

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -9,8 +9,8 @@
 </head>
 <body>
     <h1>Hello <%= user.charAt(0).toUpperCase() + user.slice(1) %></h1>
+    <h2 id="userCalories">Daily calories: 520</h2>
     <a href="/users/logout" id="logout">Logout</a>
-    <h2>Daily calories: 520</h2>
     <h2>Select your dining hall</h2>
     <form id="diningHallForm">
         <select name="diningHall" id="diningHall">
