--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -434,6 +434,48 @@
     margin-top: -5px;
   }
 
+  #userCalories {
+    text-align: right;
+    margin-right: 10px;
+    margin-top: -5px;
+  }
+
+  .button-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid #ccc;
+    padding: 15px;
+    margin: 10px auto;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    background-color: #f9f9f9;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    width: 300px;
+  }
+
+  .button-wrapper:hover {
+      background-color: #efefef;
+  }
+
+  .menu-item-name {
+      font-weight: bold;
+      font-size: 1.2em;
+  }
+
+  .nutrition-info-wrapper {
+      width: 100%;
+      display: flex;
+      justify-content: space-around;
+  }
+
+  .nutrition-info-wrapper div {
+      margin: 5px;
+  }
+
+
   
 
 
