--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -451,10 +451,11 @@
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     background-color: #f9f9f9;
-    cursor: pointer;
+    position: relative; /* Add this to position the log button */
     transition: background-color 0.3s;
-    width: 300px;
-  }
+    width: 350px;
+
+}
 
   .button-wrapper:hover {
       background-color: #efefef;
@@ -473,6 +474,26 @@
 
   .nutrition-info-wrapper div {
       margin: 5px;
+  }
+
+  .log-button {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background-color: green;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      padding: 2px 7px;
+      cursor: pointer;
+      width: 24px;
+      height: 24px;
+      text-align: center;
+      line-height: 26px;
+  }
+
+  .log-button:hover {
+      background-color: darkgreen;
   }
 
 
