--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -495,6 +495,72 @@
   .log-button:hover {
       background-color: darkgreen;
   }
+  .modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    margin: auto;
+
+  }
+
+  .modal-content {
+      background-color: #fefefe;
+      margin: 65% auto; /* 15% from the top and centered */
+      padding: 20px;
+      border: 1px solid #888;
+      width: 80%; /* Could be more or less, depending on screen size */
+  }
+
+  .close {
+      color: #aaa;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+  }
+
+  .close:hover,
+  .close:focus {
+      color: black;
+      text-decoration: none;
+      cursor: pointer;
+  }
+
+  .modal-header {
+      padding: 2px 16px;
+      background-color: #5cb85c;
+      color: white;
+  }
+
+  .modal-body {
+      padding: 2px 16px;
+  }
+
+  .modal-footer {
+      padding: 2px 16px;
+      background-color: #5cb85c;
+      color: white;
+      text-align: right;
+  }
+
+  .modal-footer button {
+      padding: 10px 15px;
+      border: none;
+      border-radius: 5px;
+      background: green;
+      color: white;
+      cursor: pointer;
+  }
+
+  .modal-footer button.cancel {
+      background: red;
+  }
 
 
   
