--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -49,6 +49,24 @@
     <div id="coursesList"></div>
     -->
     </div>
+    <div id="logModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <span class="close" onclick="closeModal()">&times;</span>
+                <h2>Log Food</h2>
+            </div>
+            <div class="modal-body">
+                <p id="modalFoodName"></p>
+                <p id="modalFoodCalories"></p>
+                <p id="modalFoodProtein"></p>
+                <!-- Add other nutritional info as needed -->
+            </div>
+            <div class="modal-footer">
+                <button class="cancel" onclick="closeModal()">Cancel</button>
+                <button onclick="confirmLogFood()">Log Food</button>
+            </div>
+        </div>
+    </div>
     <script src="/js/script.js"></script>
 </body>
 </html>
