--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -503,26 +503,27 @@
     top: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-    margin: auto;
+    overflow: hidden; /* Remove scrolling */
+    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
 
-  }
-
-  .modal-content {
-      background-color: #fefefe;
-      margin: 65% auto; /* 15% from the top and centered */
-      padding: 20px;
-      border: 1px solid #888;
-      width: 80%; /* Could be more or less, depending on screen size */
-  }
+.modal-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 16px;
+    border: 1px solid #888;
+    width: 80%; /* Adjust width as needed */
+    background-color: #fefefe;
+    border-radius: 10px;
+}
 
   .close {
       color: #aaa;
-      float: right;
       font-size: 28px;
       font-weight: bold;
+      margin-left: auto;
   }
 
   .close:hover,
@@ -532,25 +533,17 @@
       cursor: pointer;
   }
 
-  .modal-header {
-      padding: 2px 16px;
-      background-color: #5cb85c;
-      color: white;
-  }
-
   .modal-body {
-      padding: 2px 16px;
+      padding: 10px 2px 10px 2px;
   }
 
   .modal-footer {
       padding: 2px 16px;
-      background-color: #5cb85c;
       color: white;
-      text-align: right;
+      text-align: center;
   }
 
   .modal-footer button {
-      padding: 10px 15px;
       border: none;
       border-radius: 5px;
       background: green;
@@ -558,9 +551,22 @@
       cursor: pointer;
   }
 
-  .modal-footer button.cancel {
-      background: red;
+  .modal-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
   }
+  #modalFoodName {
+    flex-grow: 1;
+    font-size: 1.3em;
+    font-weight: bold;
+    text-align: center;
+    display: block; /* Ensures it's treated as a block-level element */
+    margin: auto; /* Centers the block-level element if it has a specified width */
+    width: 100%; /* Ensures the element spans the full width of its container */
+  }
+
+
 
 
   
